--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,39 @@
 /Debug/RestaurantUser.ilk
 /Debug/RestaurantUser.pdb
 /Debug/repository,restaurant.lib.recipe
+/RestaurantUser/Debug/vc142.pdb
+/RestaurantUser/Debug/RestaurantUser.vcxproj.FileListAbsolute.txt
+/RestaurantUser/Debug/vc142.idb
+/RestaurantUser/Debug/RestaurantUser.tlog/RestaurantUser.lastbuildstate
+/RestaurantUser/Debug/RestaurantUser.tlog/link.read.1.tlog
+/RestaurantUser/Debug/RestaurantUser.tlog/link.write.1.tlog
+/RestaurantUser/Debug/RestaurantUser.tlog/link.command.1.tlog
+/RestaurantUser/Debug/RestaurantUser.tlog/CL.read.1.tlog
+/RestaurantUser/Debug/RestaurantUser.tlog/CL.write.1.tlog
+/RestaurantUser/Debug/RestaurantUser.log
+/RestaurantUser/Debug/RestaurantUser.tlog/CL.command.1.tlog
+/RestaurantUser/Debug/RestaurantUser.Build.CppClean.log
+/RestaurantUser/Debug/main.obj
+/RestaurantUser/Debug/Command.obj
+/RestaurantUser/Debug/RestaurantUser.exe.recipe
+/Debug/Client.nativecodeanalysis.sarif
+/Debug/Client.nativecodeanalysis.xml
+/Debug/ClientRepository.nativecodeanalysis.sarif
+/Debug/ClientRepository.nativecodeanalysis.xml
+/Debug/CodeAnalysisResultManifest.txt
+/Debug/Provider.nativecodeanalysis.sarif
+/Debug/Provider.nativecodeanalysis.xml
+/Debug/provider.obj.enc
+/Debug/ProviderRepository.nativecodeanalysis.sarif
+/Debug/ProviderRepository.nativecodeanalysis.xml
+/Debug/Repository.nativecodeanalysis.sarif
+/Debug/Repository.nativecodeanalysis.xml
+/Debug/Restaurant.nativecodeanalysis.sarif
+/Debug/Restaurant.nativecodeanalysis.xml
+/Debug/RestaurantRepository.nativecodeanalysis.sarif
+/Debug/RestaurantRepository.nativecodeanalysis.xml
+/Debug/Staff.nativecodeanalysis.sarif
+/Debug/Staff.nativecodeanalysis.xml
+/Debug/StaffRepository.nativecodeanalysis.sarif
+/Debug/StaffRepository.nativecodeanalysis.xml
+/Debug/vc.nativecodeanalysis.all.xml
